fix footer gap on mobile

--- a/embed-css-call-from-astra.css
+++ b/embed-css-call-from-astra.css
@@ -15,10 +15,9 @@
   #reportContainer iframe {
     position: fixed;
     top: 95px;
+    bottom: 0;
     left: 0;
     width: 100vw !important;
-    height: calc(100vh - 95px) !important;
-    max-height: calc(100vh - 95px) !important;
     max-width: 100vw !important;
     margin: 0;
     padding: 0;
@@ -27,12 +26,33 @@
     z-index: 1000;
   }
 
+@supports not (height: 100dvh) {
+  #reportWrapper,
+  #reportContainer,
+  #reportContainer iframe {
+    height: calc(100vh - 95px);
+  }
+
+  body.admin-bar #reportWrapper,
+  body.admin-bar #reportContainer,
+  body.admin-bar #reportContainer iframe {
+    height: calc(100vh - 132px);
+  }
+}
+
   @supports (height: 100dvh) {
     #reportWrapper,
     #reportContainer,
     #reportContainer iframe {
       height: calc(100dvh - 95px) !important;
       max-height: calc(100dvh - 95px) !important;
+    }
+
+    body.admin-bar #reportWrapper,
+    body.admin-bar #reportContainer,
+    body.admin-bar #reportContainer iframe {
+      height: calc(100dvh - 132px) !important;
+      max-height: calc(100dvh - 132px) !important;
     }
   }
 
@@ -74,22 +94,5 @@
   body.admin-bar #reportContainer,
   body.admin-bar #reportContainer iframe {
     top: 132px;
-    height: calc(100vh - 132px) !important;
-    max-height: calc(100vh - 132px) !important;
-  }
-
-  @supports (height: 100dvh) {
-    #reportWrapper,
-    #reportContainer,
-    #reportContainer iframe {
-      height: calc(100dvh - 95px) !important;
-      max-height: calc(100dvh - 95px) !important;
-    }
-
-    body.admin-bar #reportWrapper,
-    body.admin-bar #reportContainer,
-    body.admin-bar #reportContainer iframe {
-      height: calc(100dvh - 132px) !important;
-      max-height: calc(100dvh - 132px) !important;
-    }
+    bottom: 0;
   }
